--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ idna==3.3
 multidict==6.0.2
 pydantic==1.9.1
 pyTelegramBotAPI==4.5.1
+python-dotenv==0.20.0
 requests==2.27.1
 sniffio==1.2.0
 starlette==0.19.1
